# Melodeer

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build_docker.sh  install.sh  main.c  mdcore.c  mdcore.h  mdflac.c  mdflac.h  mdwav.c  melodeer  mingw_setup.sh  run_docker.sh  save.sh  sudo_check.sh
cmake/: FindMPG123.cmake
core/: CMakeLists.txt  main.c  mdcore.c  mdcoreops.c  mdevq.c  mdplaylist.c  mdsettings.c  mdutils.c
core/buffer/: CMakeLists.txt  mdbufchunk.c  mdbufll.c  mdgarbage.c
core/buffer/include/: mdbuf.h  mdbufchunk.h  mdevq.h  mdgarbage.h
core/include/: mdll.h  mdlog.h  mdsym.h
core/utils/: CMakeLists.txt  mdtime.c
core/utils/include/: mdcontainer.h  mdpredict.h  mdtime.h
decoders/: CMakeLists.txt  mddecoder.c  mddecoderll.c
decoders/dummy/: CMakeLists.txt  mddummydec.c
decoders/flac/: CMakeLists.txt  mdflac.c
decoders/flac/cmake/: FindFLAC.cmake
decoders/include/: mddecoder.h  mddecoderll.h
decoders/mpeg/: mdmpg123.c
drivers/: CMakeLists.txt  mddriver.c
drivers/dummy/: CMakeLists.txt  mddummydrv.c
drivers/include/: mddriver.h
drivers/openal/: CMakeLists.txt  mdopenal.c
drivers/pulseaudio/: CMakeLists.txt  mdpaudio.c
exec/Linux/: melodeer
exec/Mac/: melodeer
include/: mdbuf.h  mdbufchunk.h  mdcore.h  mdcoreops.h  mddecoder.h  mddriver.h  mdevq.h  mdflac.h  mdlame.h  mdll.h  mdlog.h  mdmetadata.h  mdmpg123.h  mdplaylist.h  mdsettings.h  mdutils.h  mdwav.h
lib/: install.sh
source/: main.c  mdbufchunk.c  mdbufll.c  mdcore.c  mddecoder.c  mddriver.c  mddummydrv.c  mdflac.c  mdgarbage.c  mdlame.c  mdlog.c  mdmpg123.c  mdopenal.c  mdsettings.c  mdutils.c  mdwav.c
